<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_learning_progress"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_learning_progress" />
        <item
            android:id="@+id/nav_vocabulary"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/menu_vocabulary" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_imprint"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_imprint" />
        </menu>
    </item>

</menu>
